--- a/Action-Explore/Assembly-CSharp.csproj
+++ b/Action-Explore/Assembly-CSharp.csproj
@@ -60,9 +60,10 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SimpleScript.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_DigitValidator.cs" />
+    <Compile Include="Assets\Scripts\testing\TestingDamageDealt.cs" />
     <Compile Include="Assets\Scripts\testing\TestingCollision.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
-    <Compile Include="Assets\Scripts\Modifing\EnemyAI.cs" />
+    <Compile Include="Assets\Scripts\Modifing\EnemyBehaviour_01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshSpawner.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
     <Compile Include="Assets\TileMap\Pixel Art Top Down - Basic\Script\PropsAltar.cs" />
@@ -97,7 +98,7 @@
     <Compile Include="Assets\Scripts\testing\TestingPickUps.cs" />
     <Compile Include="Assets\Scripts\Modifing\Movement.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
-    <Compile Include="Assets\Scripts\Modifing\EnemyBehaviour.cs" />
+    <Compile Include="Assets\Scripts\Modifing\EnemyBehaviour_02.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\DropdownSample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_PhoneNumberValidator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMPro_InstructionOverlay.cs" />
@@ -115,7 +116,7 @@
     <Compile Include="Assets\TileMap\Pixel Art Top Down - Basic\Script\CameraFollow.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
-    <Compile Include="Assets\Scripts\testing\TestingDamageDealt.cs" />
+    <Compile Include="Assets\Scripts\Modifing\MeleeBehaviour.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
